--- a/guides/webex-jabber/jabber-qrg-mac.html
+++ b/guides/webex-jabber/jabber-qrg-mac.html
@@ -43,17 +43,16 @@ h3 { padding-top: 20px; }
   text-align: right;
   overflow: hidden;
   text-overflow: ellipsis;
-  /*white-space: nowrap;*/
+  white-space: nowrap;
 }
 
 </style>
 
 
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
 </head>
-
 <body>
+
 <div class="container">
 <p>&nbsp;</p>
 
@@ -98,58 +97,7 @@ h3 { padding-top: 20px; }
 	<li>Select OK.</li>
 </ol>
 
-<h2>Chats</h2>
-<h3>Start a Group Chat</h3>
-
-<ol>
-	<li>Select <strong>Jabber</strong> &gt; File &gt; New Group Chat.</li>
-	<li>Enter the contacts you want to invite in the People field.</li>
-	<li>Enter the subject for your group chat.</li>
-	<li>Select Invite.</li>
-</ol>
-
-<h3>Transfer Files</h3>
-
-<ol>
-	<li>In a chat window you can select the file transfer icon.</li>
-	<li>Select the file to transfer.</li>
-	<li>Select Send.</li>
-</ol>
-
-<h3>Set Privacy options</h3>
-
-<p>You can specify privacy options to Ctrl who can see your status and send you messages. When  you block a contact, that person cannot view your availability status or send you instant messages.</p>
- 
-<p>To review and set privacy options:</p>
-
-<ol>
-	<li>Select <strong>Jabber</strong> &gt; Preferences &gt; Privacy.</li>
-	<li>Select your privacy preferences in the Policies section.</li>
-	<li>Close the Preferences window to apply the changes.</li>
-</ol>
-
-<h3>Chat Rooms</h3>
-
-<p>When you are added as a member to a chat room, you can participate in the persistent chat room and view the discussion history.</p>
- 
-<ol>
-	<li>Select the Chat rooms tab. All the chat rooms that you are a member of are listed.</li>
-	<li>Double-click on the room that you want to enter.</li>
-	<li>View the current participant list on the right side of the chat window.</li>
-	<li>Read the discussion and enter your own chat messages. The history of the conversation is persistent. When you exit the chat room and close the client, you can return to the conversation in that room. When you return to the chat room, you can view the messages that were sent by other members while you were not logged in.</li>
-	<li>From the chat room, select Show More to view older messages.</li>
-</ol>
-
-<h4>Search Chat Rooms</h4>
-<p>You can search for instances of keywords in your chat rooms. Only rooms that you are a member of will be searched.</p>
- 
-<ol>
-	<li>Enter a search term in the Search or call field in the client.</li>
-	<li>Select Search chat room messages option in the list. A search results window is displayed.</li>
-	<li>Select Enter to go to the chat room in the list or you can refine your search using the advanced search icon.</li>
-</ol>
-
-<h2>Calls</h2>
+<h2>Make Calls</h2>
 
 <h3>Start a Jabber to Jabber Call</h3>
 
@@ -237,6 +185,59 @@ h3 { padding-top: 20px; }
 	<li>Select the Transfer icon and the call is transferred.</li>
 </ol>
 
+<h2>Chat</h2>
+<h3>Start a Group Chat</h3>
+
+<ol>
+	<li>Select <strong>Jabber</strong> &gt; File &gt; New Group Chat.</li>
+	<li>Enter the contacts you want to invite in the People field.</li>
+	<li>Enter the subject for your group chat.</li>
+	<li>Select Invite.</li>
+</ol>
+
+<h3>Transfer Files</h3>
+
+<ol>
+	<li>In a chat window you can select the file transfer icon.</li>
+	<li>Select the file to transfer.</li>
+	<li>Select Send.</li>
+</ol>
+
+<h3>Set Privacy options</h3>
+
+<p>You can specify privacy options to Ctrl who can see your status and send you messages. When  you block a contact, that person cannot view your availability status or send you instant messages.</p>
+ 
+<p>To review and set privacy options:</p>
+
+<ol>
+	<li>Select <strong>Jabber</strong> &gt; Preferences &gt; Privacy.</li>
+	<li>Select your privacy preferences in the Policies section.</li>
+	<li>Close the Preferences window to apply the changes.</li>
+</ol>
+
+<h3>Chat Rooms</h3>
+
+<p>When you are added as a member to a chat room, you can participate in the persistent chat room and view the discussion history.</p>
+ 
+<ol>
+	<li>Select the Chat rooms tab. All the chat rooms that you are a member of are listed.</li>
+	<li>Double-click on the room that you want to enter.</li>
+	<li>View the current participant list on the right side of the chat window.</li>
+	<li>Read the discussion and enter your own chat messages. The history of the conversation is persistent. When you exit the chat room and close the client, you can return to the conversation in that room. When you return to the chat room, you can view the messages that were sent by other members while you were not logged in.</li>
+	<li>From the chat room, select Show More to view older messages.</li>
+</ol>
+
+<h4>Search Chat Rooms</h4>
+<p>You can search for instances of keywords in your chat rooms. Only rooms that you are a member of will be searched.</p>
+ 
+<ol>
+	<li>Enter a search term in the Search or call field in the client.</li>
+	<li>Select Search chat room messages option in the list. A search results window is displayed.</li>
+	<li>Select Enter to go to the chat room in the list or you can refine your search using the advanced search icon.</li>
+</ol>
+
+
+
 <h2>Meetings</h2>
 
 <h3>Add Meeting Accounts</h3>
@@ -279,7 +280,7 @@ h3 { padding-top: 20px; }
 
 <p>In the group chat window, select the call icon to start a conference call. You are connected into your bridge and your participants are sent an invitation to join your conference call.</p>
 
-<h2>Accessibility</h2>
+<!-- <h2>Accessibility</h2>
 
 <h3>Grayscale Status Icons</h3>
 <p>To use grayscale status icons, select <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>Status</strong> &gt; <strong>Use accessible presence icons</strong>.</p>
@@ -405,7 +406,7 @@ h3 { padding-top: 20px; }
 </dl>
 
 <h3>Keyboard Navigation</h3>
-<p>Press the tab key and arrow keys to navigate through the main window menus.</p>
+<p>Press the tab key and arrow keys to navigate through the main window menus.</p> -->
 
 
 </div>
