--- a/guides/webex-jabber/jabber-qrg-windows.html
+++ b/guides/webex-jabber/jabber-qrg-windows.html
@@ -1,28 +1,70 @@
-<h2>New and Changed Information</h2>
-<div><a name="JABW_RF_WAF00F40_00__section_099C7F63793C4EBA844298D535CDEC48"></a><p>This document applies to Cisco Jabber for Windows Release 11.0.x and 11.1.x. </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Cisco WebEx - Meeting Center Quick Reference Guide</title>
 
-<div class="tablenoborder"><a name="JABW_RF_WAF00F40_00__table_A9CB3304D5FA4D03A45BE2326382CE7C"></a><table cellpadding="3" cellspacing="0" width="90%" bordercolor="#808080" summary="" frame="border" border="1" rules="all"><thead align="left"><tr><th class="cellrowborder" valign="top" width="NaN%" id="d25e107"><p>Description of Change</p>
-</th>
-<th class="cellrowborder" valign="top" width="NaN%" id="d25e110"><p>Date</p>
-</th>
-<th class="cellrowborder" valign="top" width="NaN%" id="d25e113"><p>Where Documented</p>
-</th>
-</tr>
-</thead>
-<tbody><tr><td class="cellrowborder" valign="top" width="NaN%" headers="d25e107 "><p>New topic added for making a Jabber to Jabber Call</p>
-</td>
-<td class="cellrowborder" valign="top" width="NaN%" headers="d25e110 "><p>September 11, 2015</p>
-</td>
-<td class="cellrowborder" valign="top" width="NaN%" headers="d25e113 "><p><a href="#JABW_TK_J0E9D9A6_00">Jabber to Jabber Call</a></p>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-</div>
-</div>
-<div class="nested1"><a name="JABW_TP_A03160AF_00"></a><h2>Availability</h2>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+
+<style>
+h2 { padding-top: 30px; }
+h3 { padding-top: 20px; }
+
+.copy-left {
+   display: inline-block;
+   text-align: right;
+   margin: 0;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+ }
+
+.dl-horizontal {
+  *zoom: 1;
+}
+.dl-horizontal:before,
+.dl-horizontal:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.dl-horizontal:after {
+  clear: both;
+}
+.dl-horizontal dt {
+  float: left;
+  width: 160px;
+  clear: left;
+  text-align: right;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+</style>
+
+
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+<p>&nbsp;</p>
+
+<div class="jumbotron">INFO ON INSTALL, SYS REQS HERE</div>
+
+
+
+
+
+
+
+<h2>Availability</h2>
 <a name="JABW_TK_CC285B01_00"></a><h3>Create Personal
 	 Status Messages</h3>
 <div><a name="JABW_TK_CC285B01_00__context_B418D766DE924D6586D627E3AA3C1B1F"></a> 
@@ -51,132 +93,43 @@
 				displays your personal status message. 
 			 </p>
  
-		  </td></tr>
-</ol></table><hr noshade="noshade"/>
-</div>
-</div>
-</div>
-<div class="nested1"><a name="JABW_TP_C94DCBEC_00"></a><h2>Contacts</h2>
-<a name="JABW_TK_A0A20B41_00"></a><h3>Add Directory
-	 Groups</h3>
-<div><a name="JABW_TK_A0A20B41_00__context_79148CA28E4443BD853C44393B50B1C5"></a> 
-		<p>Directory groups
-		  are maintained by your administrator for your enterprise. When you add a
-		  directory group to your Contacts list, then the list of people assigned to that
-		  directory group are automatically added to the group in your contacts. You
-		  don't have to maintain the list because it synchronizes automatically with the
-		  directory for your enterprise, meaning that people are added and removed from
-		  the group in your Contacts whenever the administrator adds or removes them from
-		  the enterprise directory. You can remove a directory group from your contacts
-		  list at any time. 
-		</p>
+
+<h2>Contacts</h2>
+
+<h3>Add Directory Groups</h3>
+<p>Directory groups are maintained by your administrator for your enterprise. When you add a directory group to your Contacts list, then the list of people assigned to that directory group are automatically added to the group in your contacts. You don't have to maintain the list because it synchronizes automatically with the directory for your enterprise, meaning that people are added and removed from the group in your Contacts whenever the administrator adds or removes them from the enterprise directory. You can remove a directory group from your contacts list at any time.</p>
+<p>If the directory group is larger than 100 people, then no presence is displayed for anyone in that group, unless someone is also in your personal contacts list.</p>
  
-		<p>If the directory
-		  group is larger than 100 people, then no presence is displayed for anyone in
-		  that group, unless someone is also in your personal contacts list. 
-		</p>
- 
-	 </div>
-<b>Procedure</b><hr noshade="noshade"/><table class="stepTable" border="0" cellpadding="3" cellspacing="0" width="90%"><ol><tr><td align="left" valign="top"><b>StepÂ 1</b>Â Â 
-            </td><td valign="top" class="stepexpand"><a name="JABW_TK_A0A20B41_00__step_C9F0DA27AC984CCC969F71CA69D44B4A"></a><span>Select the
-			 Menu icon, then 
-			 <strong>File</span> &gt; <strong>New</span> &gt; <strong>Directory
-				  Group</span></span>. 
-		  </span></td></tr>
-<tr><td align="left" valign="top"><b>StepÂ 2</b>Â Â 
-            </td><td valign="top" class="stepexpand"><a name="JABW_TK_A0A20B41_00__step_0FB07F9D378A418B80A8B1608DDDE94C"></a><span>In the dialog
-			 box that opens, enter the directory group name. 
-		  </span>  
-			 <p>Your may be
-				able to search for the directory group that you want to add. But if you don't
-				have any search capability, then the directory group name must be provided to
-				you by your administrator. 
-			 </p>
- 
-		  </td></tr>
-<tr><td align="left" valign="top"><b>StepÂ 3</b>Â Â 
-            </td><td valign="top" class="stepexpand"><a name="JABW_TK_A0A20B41_00__step_90A253D98E9E484C859F317FF9C86B65"></a><span>Select 
-			 <strong>Add</span> then 
-			 <strong>OK</span>. 
-		  </span></td></tr>
-</ol></table><hr noshade="noshade"/>
-</div>
-</div>
-<a name="JABW_TK_A64EC294_00"></a><h3>Add External
-	 Contacts</h3>
-<div><a name="JABW_TK_A64EC294_00__context_A157C2E9D8CE46CD924FF554A2C91427"></a>
-		<p>Cisco Jabber lets
-		  you add contacts from chat applications that are external to your organization.
-		  You can also add custom contacts for people without an IM address.
-		</p>
+Select the Menu icon, then <strong>File</span> &gt; <strong>New</span> &gt; <strong>Directory Group</span></span>. 
+In the dialog box that opens, enter the directory group name. 
+<p>Your may be	able to search for the directory group that you want to add. But if you don't have any search capability, then the directory group name must be provided to	you by your administrator.</p>
+Select <strong>Add</span> then <strong>OK</span>. 
 
-		<p>Your system
-		  administrator must enable this feature. If you cannot add external contacts,
-		  ask your system administrator for help.
-		</p>
+<h3>Add External Contacts</h3>
+<p>Cisco Jabber lets you add contacts from chat applications that are external to your organization. You can also add custom contacts for people without an IM address.</p>
+<p>Your system administrator must enable this feature. If you cannot add external contacts, ask your system administrator for help.</p>
 
-	 </div>
-<b>Procedure</b><hr noshade="noshade"/><table class="stepTable" border="0" cellpadding="3" cellspacing="0" width="90%"><ol><tr><td align="left" valign="top"><b>StepÂ 1</b>Â Â 
-            </td><td valign="top"><a name="JABW_TK_A64EC294_00__step_B5A87105A0E8461E8A6D5FB049E10B73"></a><span>Select 
-			 <strong>File</span> &gt; <strong>New</span></span> and select the type of contact
-			 that you want to add.
-		  </span></td></tr>
-<tr><td align="left" valign="top"><b>StepÂ 2</b>Â Â 
-            </td><td valign="top"><a name="JABW_TK_A64EC294_00__step_998D9C78171A40939BC5BF1A6F888D1D"></a><span>Enter the
-			 email address of your contact. For custom contacts without an IM address, enter
-			 the contact details that you want to use.
-		  </span></td></tr>
-<tr><td align="left" valign="top"><b>StepÂ 3</b>Â Â 
-            </td><td valign="top"><a name="JABW_TK_A64EC294_00__step_9269BC24303B4E95BFA9EBF82083B42A"></a><span>Select a
-			 contact group.
-		  </span></td></tr>
-<tr><td align="left" valign="top"><b>StepÂ 4</b>Â Â 
-            </td><td valign="top"><a name="JABW_TK_A64EC294_00__step_857D0137483A4ED18A2021DBFAFCB9A0"></a><span>Select 
-			 <strong>Add</span>.
-		  </span></td></tr>
-</ol></table><hr noshade="noshade"/>
-</div>
-</div>
-<a name="JABW_TK_I91503DB_00"></a><h3>Import Contact
-	 Lists</h3>
-<div><a name="JABW_TK_I91503DB_00__context_682FE8EC890E4B15B9F0B29B972774CE"></a>
-		<p>You can create
-		  contact lists in XML format and then import them into 
-		  <span>Cisco Jabber</span>.
-		</p>
+Select <strong>File</span> &gt; <strong>New</span></span> and select the type of contact that you want to add.
+Enter the email address of your contact. For custom contacts without an IM address, enter the contact details that you want to use.
+Select a contact group.
+Select <strong>Add</span>.
 
-	 </div>
-<b>Procedure</b><hr noshade="noshade"/><table class="stepTable" border="0" cellpadding="3" cellspacing="0" width="90%"><ol><tr><td align="left" valign="top"><b>StepÂ 1</b>Â Â 
-            </td><td valign="top"><a name="JABW_TK_I91503DB_00__step_9152E535BE624005965E84BF9E66CB37"></a><span>Open the main 
-			 <span>Cisco Jabber</span> window.
-		  </span></td></tr>
-<tr><td align="left" valign="top"><b>StepÂ 2</b>Â Â 
-            </td><td valign="top"><a name="JABW_TK_I91503DB_00__step_F87119D9D8CC4D8DAD594748FF2E002E"></a><span>Select 
-			 <strong>File</span> &gt; <strong>Import
-				  contacts.</span></span>.
-		  </span></td></tr>
-<tr><td align="left" valign="top"><b>StepÂ 3</b>Â Â 
-            </td><td valign="top"><a name="JABW_TK_I91503DB_00__step_80AF138EC70245729F8FB9AE923A2684"></a><span>Browse to the
-			 location of the contact list definitions XML file.
-		  </span></td></tr>
-<tr><td align="left" valign="top"><b>StepÂ 4</b>Â Â 
-            </td><td valign="top"><a name="JABW_TK_I91503DB_00__step_315A25C1DBCE41A798DA069BD4F1A940"></a><span>Select the
-			 contact list definitions file and then select 
-			 <strong>Open</span>.
-		  </span></td></tr>
-</ol></table><hr noshade="noshade"/>
- <p>
-		<p><span>Cisco Jabber</span> imports the contacts from the
-		  definitions file. The contacts are available in your contact list.
-		</p>
+<h3>Import Contact Lists</h3>
+<p>You can create contact lists in XML format and then import them into <span>Cisco Jabber</span>.</p>
 
-	 </p></div>
-<a name="JABW_RF_C55702AD_00"></a><h4>Contact List
-	 Definitions</h4>
-<div><a name="JABW_RF_C55702AD_00__section_BF052FEAEFC2466983B2C5B447323FF7"></a> 
-		The following XML
-		  snippet shows the structure of a contact list definitions file: 
-		  <pre class="codeblock">&lt;?xml version="1.0" encoding="utf-8"?&gt;
+Open the main <span>Cisco Jabber</span> window.
+Select <strong>File</span> &gt; <strong>Import contacts.</span></span>.
+Browse to the location of the contact list definitions XML file.
+Select the contact list definitions file and then select <strong>Open</span>.
+
+<p><span>Cisco Jabber</span> imports the contacts from the definitions file. The contacts are available in your contact list.</p>
+
+<h4>Contact List Definitions</h4>
+<p>Please note: for assistance with these features, contact the ITS Service Desk at 216.368.HELP (4357).</p>
+<p>The following XML snippet shows the structure of a contact list definitions file:</p>
+
+<pre class="codeblock">
+&lt;?xml version="1.0" encoding="utf-8"?&gt;
 &lt;buddylist&gt;
   &lt;group&gt;
     &lt;gname&gt;<var class="varname">Group Name</var>&lt;/gname&gt;
@@ -186,97 +139,11 @@
     &lt;/user&gt;
   &lt;/group&gt;
 &lt;/buddylist&gt;</pre>
- 
-		</div>
- 
-		The following
-		  table describes the elements in a contact list definitions file: 
-		
-<div class="tablenoborder"><a name="JABW_RF_C55702AD_00__table_3FA8C4CC7A864699A1687EE00D1040E2"></a><table cellpadding="3" cellspacing="0" width="90%" bordercolor="#808080" summary="" frame="border" border="1" rules="all"><thead align="left"><tr><th class="cellrowborder" valign="top" width="17.211703958691913%" id="d25e533">Element 
-				  </th>
-<th class="cellrowborder" valign="top" width="82.78829604130809%" id="d25e535">Description 
-				  </th>
-</tr>
-</thead>
-<tbody><tr><td class="cellrowborder" valign="top" width="17.211703958691913%" headers="d25e533 "><span class="filepath">&lt;?xml version="1.0"
-						encoding="utf-8"?&gt;</span> 
-				  </td>
-<td class="cellrowborder" valign="top" width="82.78829604130809%" headers="d25e535 ">XML declaration. 
-					 Your
-						definitions file must contain an XML declaration with the following attributes:
-						
-					 <ul><li style="margin-top:0.5em; margin-bottom:.5em; line-height:1.2em;"><a name="JABW_RF_C55702AD_00__li_B9FE5E9625E4415788727E0EFC1CD2AE"></a> 
-						  <p style="display:inline"><span class="filepath">version</span> - Specifies the version of the XML file. 
-						  </p>
- 
-						</li>
-<li style="margin-top:0.5em; margin-bottom:.5em; line-height:1.2em;"><a name="JABW_RF_C55702AD_00__li_714F364A311349339B5D6C7A269086CA"></a> 
-						  <p style="display:inline"><span class="filepath">encoding</span> - Specifies the encoding. You must use 
-							 <span class="filepath">utf-8</span>. 
-						  </p>
- 
-						</li>
-</ul>
- 
-					 </div>
- 
-				  </td>
-</tr>
-<tr><td class="cellrowborder" valign="top" width="17.211703958691913%" headers="d25e533 "><span class="filepath">buddylist</span> 
-				  </td>
-<td class="cellrowborder" valign="top" width="82.78829604130809%" headers="d25e535 ">Root element of the contact list definition. 
-				  </td>
-</tr>
-<tr><td class="cellrowborder" valign="top" width="17.211703958691913%" headers="d25e533 "><span class="filepath">group</span> 
-				  </td>
-<td class="cellrowborder" valign="top" width="82.78829604130809%" headers="d25e535 ">Parent element of a contact group. 
-					 <p>One
-						group can contain multiple users. 
-					 </p>
- 
-					 <p>There is
-						no limit to the number of users a group can contain. There is also no limit to
-						the number of groups you can include in a contact list definitions file. 
-					 </p>
- 
-					 <p>However,
-						your server sets a restriction to the number of contacts that you can add to 
-						<span>Cisco Jabber</span>. You must ensure you do not exceed
-						that limit in your contact list definitions file. 
-					 </p>
- 
-				  </td>
-</tr>
-<tr><td class="cellrowborder" valign="top" width="17.211703958691913%" headers="d25e533 "><span class="filepath">gname</span> 
-				  </td>
-<td class="cellrowborder" valign="top" width="82.78829604130809%" headers="d25e535 ">Specifies the name of the group. 
-				  </td>
-</tr>
-<tr><td class="cellrowborder" valign="top" width="17.211703958691913%" headers="d25e533 "><span class="filepath">user</span> 
-				  </td>
-<td class="cellrowborder" valign="top" width="82.78829604130809%" headers="d25e535 ">Parent element that holds details for a single user. 
-				  </td>
-</tr>
-<tr><td class="cellrowborder" valign="top" width="17.211703958691913%" headers="d25e533 "><span class="filepath">uname</span> 
-				  </td>
-<td class="cellrowborder" valign="top" width="82.78829604130809%" headers="d25e535 ">Specifies the instant messaging (IM) address of a user. 
-				  </td>
-</tr>
-<tr><td class="cellrowborder" valign="top" width="17.211703958691913%" headers="d25e533 "><span class="filepath">fname</span> 
-				  </td>
-<td class="cellrowborder" valign="top" width="82.78829604130809%" headers="d25e535 ">Specifies the name that displays in the client user interface. 
-				  </td>
-</tr>
-</tbody>
-</table>
-</div>
- 
-		</div>
- 
-		The following is an example XML definition of a contact list that you
-		  can import into 
-		  <span>Cisco Jabber</span>:
-		  <pre class="codeblock">&lt;?xml version="1.0" encoding="utf-8"?&gt;
+
+<p>The following is an example XML definition of a contact list that you can import into <span>Cisco Jabber</span>:</p>
+
+<pre class="codeblock">
+&lt;?xml version="1.0" encoding="utf-8"?&gt;
 &lt;buddylist&gt;
   &lt;group&gt;
     &lt;gname&gt;Sales&lt;/gname&gt;
@@ -298,34 +165,13 @@
   &lt;/group&gt;
 &lt;/buddylist&gt;</pre>
 
-		</div>
+<h2>Chat</h2>
 
-	 </div>
-</div>
-</div>
-</div>
-</div>
-<div class="nested1"><a name="JABW_TP_CCA85A98_00"></a><h2>Chats</h2>
-<a name="JABW_TK_S6DE6460_00"></a><h3>Search from Chat
-	 Windows</h3>
-<div><a name="JABW_TK_S6DE6460_00__context_4E54CFAA69C4494ABE4C008BB62C8E3A"></a> 
-		<p>You can find, add,
-		  and call contacts from the search bar in chat windows. 
-		</p>
+<h3>Search from Chat Windows</h3>
+<p>You can find, add, and call contacts from the search bar in chat windows.</p>
  
-	 </div>
-<b>Procedure</b><hr noshade="noshade"/><table class="stepTable" border="0" cellpadding="3" cellspacing="0" width="90%"><ol><tr><td align="left" valign="top"><b>StepÂ 1</b>Â Â 
-            </td><td valign="top" class="stepexpand"><a name="JABW_TK_S6DE6460_00__step_EFC2070399FF4B71B6804533D2ACB838"></a><span>Enter the name
-			 of a contact in the search bar of the chat window. 
-		  </span>  
-			 <p>You can enter
-				phone numbers in the search bar to call directly from the chat window. 
-			 </p>
- 
-		  </td></tr>
-<tr><td align="left" valign="top"><b>StepÂ 2</b>Â Â 
-            </td><td valign="top" class="stepexpand"><a name="JABW_TK_S6DE6460_00__step_69A0409FE36348568D53A1E19D79625E"></a><span>Start a
-			 conversation with your contact by using one of the following methods:
+Enter the name of a contact in the search bar of the chat window. You can enter phone numbers in the search bar to call directly from the chat window.
+Start a conversation with your contact by using one of the following methods:
 		  </span><ul><li style="margin-top:0.5em; margin-bottom:.5em; line-height:1.2em;"><a name="JABW_TK_S6DE6460_00__choice_64249BA46F24489BA1D84FB3187B0784"></a>Hover your cursor over the
 				contact to add that contact to a list or to call that contact. 
 			 </li>
