--- a/guides/webex-jabber/jabber-start.html
+++ b/guides/webex-jabber/jabber-start.html
@@ -1,3 +1,332 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Cisco WebEx - Meeting Center Quick Reference Guide</title>
+
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+
+<style>
+h2 { padding-top: 30px; }
+h3 { padding-top: 20px; }
+
+.copy-left {
+   display: inline-block;
+   text-align: right;
+   margin: 0;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+ }
+
+</style>
+
+
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+</head>
+
+<body>
+<div class="container">
+
+
+<p>&nbsp;</p>
+<h1>Cisco WebEx&trade;<br> 
+<small>Meeting Center</small></h1> 
+<p>Meeting Center allows Web-based conferencing in a collaborative session sharing audio, video, and the desktop. As many as 1,000 participants may attend online meetings by telephone, computer or using a mobile device.</p>
+
+<h2>Install the Application</h2>
+
+<h2>Add Accounts</h2>
+
+<h2>Test Audio and Video</h2>
+
+
+
+
+
+<ol>
+<li>Go to <a href="https://cwru.webex.com" target="_blank">cwru.webex.com</a>.</li>
+<li>Sign in using your CWRU network ID and password.</li>
+<li>On the left of the page, click <strong>Host a Meeting</strong>.</li>
+</ol>
+
+<h3>Schedule an Open-ended Meeting</h3>
+<p>Set up meeting rooms for a project, course, consultation or office hours. This option is useful when the duration or frequency of meeting isn't certain.</p>
+
+<ol>
+<li>Click <strong>Schedule a Meeting</strong>.<br>
+<p>&nbsp;</p>
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+      <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/WebEx/schedule-meeting.png" class="img-responsive">
+  </div>
+</div>
+
+</li>
+<li>Click <strong>Advanced</strong>
+<li>Add a topic (ex., Office Hours, ENG 510).</li>
+<li>Uncheck the option marked "Delete from My Meetings when completed" (selected by default).</li>
+<li>Click "Return to <strong>Quick Scheduler</strong>". 
+<li>Set a future start time.</li>
+<li>Add attendees by email (separate emails with a comma or semicolon).</li>
+<li>Optionally, set a password.</li>
+<li>Click <strong>Schedule Meeting</strong>.</li>
+<li>Attendees will receive an invitation by email.</li>
+<li>The organizer may re-open a closed meeting room at any time by clicking <strong>Host a Meeting > My Meetings</strong> and selecting the meeting by name from the list.</li>
+<li>Click <strong>Start</strong> to restart and refer attendees to previous invite, send a new invite from the application, or copy and paste the <strong>Meeting link</strong> into an IM or email message.</li>
+</ol>
+
+
+<h3>Schedule Future Meeting</h3>
+
+<ol>
+<li>Click <strong>Schedule a Meeting</strong>.</li>
+<li>Add a topic, meeting date, time and duration.</li>
+<li>Optionally, set a password.</li>
+<li>Add attendees by email (separate emails with a comma or semicolon).</li>
+<li>Click <strong>Schedule Meeting</strong>.</li>
+<li>Attendees will receive an invitation by email.</li>
+</ol>
+
+
+<h3>Start an Ad-hoc Meeting using your 'Personal Room'</h3>
+
+<ol>
+<li>Click <strong>My Personal Room</strong>.</li>
+<li>Click <strong>Enter Room</strong>.</li>
+<li>The WebEx application launches.</li>
+<li>Click <strong>Invite & Remind</strong>.<br>
+<p>&nbsp;</p>
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+      <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/WebEx/invite-remind.png" class="img-responsive">
+  </div>
+</div>
+
+</li>
+<li>Add Invitees by email or phone and click <strong>Send</strong>. Or, click <strong>Invite with your local email</strong> to launch your email client (e.g., Outlook, Mac Mail, Thunderbird).</li>
+<li>Recipients receive an invitation to join meeting.<br>
+<p>&nbsp;</p>
+<pre>
+
+Hello,
+Join me now in my Personal Room.
+
+JOIN WEBEX MEETING
+https://cwru.webex.com/join/CWRUnetID | 716 221 ###
+
+JOIN BY PHONE
+1-650-479-#### Call-in toll number (US/Canada)
+Access code: 716 221 ###
+
+Can't join the meeting? Contact support here:
+https://cwru.webex.com/mc
+
+IMPORTANT NOTICE: Please note that this WebEx service allows audio and 
+other information sent during the session to be recorded, which may be
+discoverable in a legal matter. By joining this session, you
+automatically consent to such recordings. If you do not consent to being
+recorded, discuss your concerns with the host or do not join the session.
+
+</pre></li></ol>
+
+
+<h2>Attend Meetings</h2>
+
+<p>If you are invited to attend a WebEx meeting, you will receive an email prior to the beginning of the meeting from the meeting organizer. This email contains important meeting details like the date and time of the meeting, call-in instructions and a link to join the meeting online.</p>
+<p>Many email clients and webmail applications, including CWRU webmail, allow you to create calendar events directly from email messages.</p>
+
+
+<h3>Attend from a mobile device</h3>
+<p>To attend a WebEx meeting from your mobile device you'll need to download and install the <strong>Cisco WebEx Meetings</strong> application for your platform. Cisco supports Android, iOS, Blackberry 10 and Windows Phone 8.</p> 
+<p>If you have a WebEx account you may view your schedule of upcoming meetings on your device. However, you do not need a WebEx account to attend a meeting.</p>
+
+<div class="row">
+<div class="col-xs-12 col-md-12">&nbsp;</div></div>
+<div class="row">
+  	<div class="col-xs-12 col-md-6">
+  		<div class="panel panel-default">
+  			<div class="panel-heading"><p class="lead">Android</p></div>
+  				<div class="panel-body">
+  					<strong>Install application</strong>
+						<p>
+							<ol>
+								<li>Search for <mark>Cisco WebEx Meetings</mark> in the Google Play Store.</li>
+								<li>Tap <strong>Install</strong> and follow the on-screen instructions.</li>
+							</ol>
+						</p>
+					<strong>View upcoming meetings</strong>
+						<p>
+							<ol>
+								<li>Open the WebEx Meetings application on your device, then tap <strong>Log In</strong>.</li>
+								<li>Enter your credentials at the Single Sign-On (SSO) page.</li>
+							</ol>
+						</p>
+					<strong>Join a meeting or session</strong>
+						<ul>
+							<li><strong>Without WebEx account</strong>
+							<ol>
+								<li>Open the application and tap <strong>Join by number</strong>.</li>
+								<li>Enter your meeting or session number.</li>
+								<li>Enter your name and email address. Then, tap <strong>Join</strong>.</li>
+								<li>Or open the invitation email and tap the <strong>Join WebEx Meeting</strong>.</li>
+							</ol>
+							</li>
+							<li><strong>With WebEx account</strong><br>
+							When signed in, choose the meeting in the <strong>My Meetings</strong> view, then tap <strong>Join</strong>.</li>
+						</ul>
+				</div>
+		</div>
+	</div>
+	
+	<div class="col-xs-12 col-md-6">
+  		<div class="panel panel-default">
+  			<div class="panel-heading"><p class="lead">iOS</p></div>
+  				<div class="panel-body">
+  					<strong>Install application</strong>
+						<p>
+							<ol>
+								<li>Search for <mark>WebEx</mark> in the App Store.</li>
+								<li>Choose "Cisco WebEx Meetings" and then tap <strong>Get</strong> to install.</li>
+							</ol>
+						</p>
+				<strong>View upcoming meetings</strong>
+					<p>
+						<ol>
+							<li>Open the WebEx Meetings application on your device, then tap <strong>Sign In</strong>.</li>
+							<li>Enter your credentials at the Single Sign-On (SSO) page.</li>
+						</ol>
+					</p>
+				<strong>Join a meeting or session</strong>
+					<ul>
+						<li><strong>Without WebEx account</strong>
+							<ol>
+								<li>Open the application and enter your meeting or session number.</li>
+								<li>Enter your name and email address. Then, tap <strong>Join Meeting</strong>.</li>
+								<li>Or open the invitation email and tap the meeting URL.</li>
+							</ol>
+						</li>
+						<li><strong>With WebEx account</strong><br>
+						When signed in, choose the meeting in the <strong>My Meetings</strong> view, then tap <strong>Join Meeting</strong>.</li>
+					</ul>
+				</div>
+		</div>
+	</div>
+</div>
+
+<h3>Attend by telephone (audio only)</h3>
+
+<ol>
+<li>Call conference number provided in invitation email.</li>
+<li>When prompted, enter meeting access code using telephone keypad.</li>
+<li>A tone will indicate that you have  entered the meeting.</li>
+</ol>
+
+<h3>Attend with computer</h3>
+
+<ol>
+<li>Click the meeting link provided by the organizer (e.g., https://cwru.webex.com/join/CWRUnetID)</li>
+<li>If you have not previously attended a WebEx meeting, the system will prompt you to download and install the Meeting Center application.</li>
+<li>The WebEx application will launch and you will join the meeting room.</li>
+<li>Click <strong>Call Using Computer</strong> to connect meeting audio.<br>
+<p>&nbsp;</p>
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+      <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/WebEx/call-with-computer.png" class="img-responsive">
+  </div>
+  <div class="col-xs-6 col-md-3">
+      <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/WebEx/audio-options.png" class="img-responsive">
+  </div>
+</div>
+
+<p>Or, click the three dots below to show other audio options and directions:</p>
+	<ul>
+	<li>Call Me (the meeting will call you)</li>
+	<li>I Will Call In (click to show instructions)</li>
+	<li>Call Using Computer (default)</li></ul></li>
+<li>When audio has connected successfully, the icon will turn from blue to green and text will read "Connected to Audio".<br>
+<p>&nbsp;</p>
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+      <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/WebEx/connected-audio.png" class="img-responsive">
+  </div>
+</div>
+
+</li>
+<li>A list of meeting attendees as well as video & audio options are shown in upper-right of the application window.</li>
+</ol>
+
+<h3>Attend with computer using telephone for audio</h3>
+
+<ol>
+<li>Click the meeting link provided by the organizer (e.g., https://cwru.webex.com/join/CWRUnetID)</li>
+<li>If you have not previously attended a WebEx meeting, the system will prompt you to download and install the Meeting Center application.</li>
+<li>The WebEx application will launch and you will join the meeting room.</li>
+<li>A list of meeting attendees as well as video & audio options are shown in upper-right of the application window.</li>
+<li>Call conference number provided in invitation email.</li>
+<li>When prompted, enter meeting access code using telephone keypad.</li>
+<li>A tone will indicate that you have entered the meeting.</li>
+</ol>
+
+<hr>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+
+<div class="well">
+<p class="lead">Answer three questions to help us improve your experience</p>
+
+<iframe name="confirm" id="confirm" style="display:none;" onload="if(typeof sent_confirm!='undefined'){window.location='https://googledrive.com/host/0B5e4Smfyuda_dEJRRlZ1UmhSTGM/thank-you-webex.html';}"></iframe>
+<form action="https://docs.google.com/forms/d/1XYrNCfwy4w_Cx_k7FkaTN5LhYN8e2920DOna_n7l-jQ/formResponse" method="POST" id="ss-form" target="confirm" onsubmit="sent_confirm=true">
+
+    <div class="form-group">
+  		<p><label>Would you recommend WebEx to a colleague or friend? *</label><br>
+    		<select class="form-control" name="entry.535955540" id="entry_535955540" placeholder="Yes">
+    		<option selected disabled hidden value=''></option>
+    		<option value="Yes">Yes</option> 
+    		<option value="No">No</option>
+  		</select></p>
+
+  		<p><label>Do the included instructions lead naturally to an expected outcome? *</label><br>
+    		<select class="form-control" name="entry.1059610721" id="entry_1059610721" placeholder="Yes">
+    		<option selected disabled hidden value=''></option>
+    		<option value="Yes">Yes</option> 
+    		<option value="No">No</option>
+  		</select></p>
+
+  		<p><label>Are the included instructions clear and understandable? *</label><br>
+    		<select class="form-control" name="entry.1188770357" id="entry_1188770357" placeholder="Yes">
+    		<option selected disabled hidden value=''></option>
+    		<option value="Yes">Yes</option> 
+    		<option value="No">No</option>
+  		</select></p>
+
+  		<p><label>Feedback</label><br>
+  		<textarea name="entry.1986528048" class="form-control" rows="3" id="entry_1986528048" placeholder="Survey responses are anonymous. So if you want personal followup, add your contact information here."></textarea></p>
+		<p>&nbsp;</p>
+		<button type="submit" name="submit" value="Submit" id="ss-submit" class="btn btn-primary">Submit response</button>
+		</form>
+	</div>
+</div>
+
+<hr>
+
+<div class="pull-right">
+<p><span class="copy-left">&copy;</span> 2015, Case Western Reserve University</p>
+</div>
+<div class="clearfix"></div>
+</div>
+</body>
+</html>
+
+
 you will need:
 
 
