--- a/guides/webex-jabber/webex_qrg_beta.html
+++ b/guides/webex-jabber/webex_qrg_beta.html
@@ -38,7 +38,6 @@ h3 { padding-top: 20px; }
 <h1>Cisco WebEx&trade;<br> 
 <small>Meeting Center</small></h1> 
 <p>Meeting Center allows Web-based conferencing in a collaborative session sharing audio, video, and the desktop. As many as 1,000 participants may attend online meetings by telephone, computer or using a mobile device.</p>
-<p>Note: You may be prompted to download a browser extension to use this application.</p>
 </div>
 
 <h2>Schedule a Meeting</h2>
@@ -87,52 +86,9 @@ h3 { padding-top: 20px; }
 <li>Attendees will receive an invitation by email.</li>
 </ol>
 
-<h3>Schedule Meeting for Another User</h3>
-
-<p>First, the WebEx account holder should set his or her preferences to specify delegated host(s).</p>
-<ol>
-<li>Click <strong>Setup</strong> > <strong> Preferences</strong> > <strong>Scheduling Options</strong>.</li>
-<li>Name hosts by email (separate emails with a comma or semicolon).</li>
-<li>OR, to choose host(s) from a list, click "Select host". Choose one or more host email addresses and click <strong>OK</strong>.</li>
-<li>Click <strong>Save</strong> to store your preferences.</li>
-</ol>
-
-<p>A delegated user may then schedule meetings on another's behalf using the Advanced Scheduler:</p>
-<ol>
-<li>Click <strong>Host a meeting</strong> > <strong>Schedule meeting</strong> > <strong>Advanced Scheduler</strong>.</li>
-<li>Choose the person for whom you are scheduling a meeting from the "Schedule for" dropdown menu.</li>
-<li>Schedule a meeting and add attendees as normal.</li>
-</ol>
-
-<h3>Allow a Student to Host a Meeting</h3>
-
-<ol>
-<li>Schedule a meeting as you normally would.</li>
-<li>Send student host the meeting link and your "Host Key".</li>
-<li>From the WebEx application, the student should click <strong>Participant</strong> > <strong>Reclaim Host Role...</strong>" and then enter the host key provided by the WebEx account holder.</li>
-<li>The student is now the host and can run the meeting.<br>
-<p>
-	<div class="well well-sm">
-	<ul>
-		<li>Overlapping meetings and concurrent meetings are not allowed. A host key may be used by one person at a time.</li>
-		<li>If the meeting is recorded, the host (faculty member) is the only one who can send the recording out</li>
-	</ul>
-	</div>
-</p>
-</li>
-</ol>
 
 <h3>Start an Ad-hoc Meeting using your 'Personal Room'</h3>
-<p>Most host accounts include a Personal Room (PR). Personal Rooms allow you to hold instant meetings at any time with the same meeting settings and join link.</p>
-<p>The links for Personal Rooms are formatted as follows:
-	<ul>
-		<li>Host's Personal Room Web Page: cwru.webex.com/meet/UserID</li>
-    	<li>Personal Room Join link: cwru.webex.com/join/UserID<br>
-    	<mark>Note:</mark> This joins you directly into the Personal Room meeting, bypassing the web page.</li>
-    </ul>
-</p>
 
-<p>Add invitees from the WebEx homepage:</p>
 <ol>
 <li>Click <strong>My Personal Room</strong>.</li>
 <li>Click <strong>Enter Room</strong>.</li>
@@ -177,7 +133,6 @@ recorded, discuss your concerns with the host or do not join the session.
 
 <p>If you are invited to attend a WebEx meeting, you will receive an email prior to the beginning of the meeting from the meeting organizer. This email contains important meeting details like the date and time of the meeting, call-in instructions and a link to join the meeting online.</p>
 <p>Many email clients and webmail applications, including CWRU webmail, allow you to create calendar events directly from email messages.</p>
-<p>Wireless connections can be used, but how well they will work depends on the connection speed and your current configuration. If you have issues using WebEx on a wireless internet connection, try using a computer with wired network connection before contacting the Service Desk for technical support.</p>
 
 
 <h3>Attend from a mobile device</h3>
@@ -296,7 +251,6 @@ recorded, discuss your concerns with the host or do not join the session.
 </div>
 
 </li>
-<li>To avoid audio feedback, use headphones or mute microphone when not speaking.</li>
 <li>A list of meeting attendees as well as video & audio options are shown in upper-right of the application window.</li>
 </ol>
 
@@ -308,10 +262,9 @@ recorded, discuss your concerns with the host or do not join the session.
 <li>The WebEx application will launch and you will join the meeting room.</li>
 <li>A list of meeting attendees as well as video & audio options are shown in upper-right of the application window.</li>
 <li>Call conference number provided in invitation email.</li>
-<li>When prompted, enter meeting access code and participant number using telephone keypad.</li>
+<li>When prompted, enter meeting access code using telephone keypad.</li>
 <li>A tone will indicate that you have entered the meeting.</li>
 </ol>
-
 
 <hr>
 
